test/integration/bad/tuples/empty_tuple_expr.stan
model {
  tuple(real, real) y = ();
}
